# src/types/ChatRequest.ts
@@ -1,0 +1,7 @@
+type ChatRequest = {
+    model: string;
+    messages: { role: string; content: string }[];
+    temperature: number;
+}
+
+export default ChatRequest;
